convert loki.config and *.affinity to datastructures instead of strings
Signed-off-by: Don Wonders <dwonders@diameterhealth.com>

--- a/charts/loki-distributed/templates/gateway/deployment-gateway.yaml
+++ b/charts/loki-distributed/templates/gateway/deployment-gateway.yaml
@@ -77,7 +77,7 @@ spec:
             {{- toYaml .Values.gateway.resources | nindent 12 }}
       {{- with .Values.gateway.affinity }}
       affinity:
-        {{- tpl . $ | nindent 8 }}
+        {{- tpl (toYaml . $) | nindent 8 }}
       {{- end }}
       {{- with .Values.gateway.nodeSelector }}
       nodeSelector:
