--- a/charts/loki-distributed/templates/distributor/deployment-distributor.yaml
+++ b/charts/loki-distributed/templates/distributor/deployment-distributor.yaml
@@ -82,7 +82,7 @@ spec:
             {{- toYaml .Values.distributor.resources | nindent 12 }}
       {{- with .Values.distributor.affinity }}
       affinity:
-        {{- tpl . $ | nindent 8 }}
+        {{- tpl (toYaml . $) | nindent 8 }}
       {{- end }}
       {{- with .Values.distributor.nodeSelector }}
       nodeSelector:
