--- a/charts/loki-distributed/templates/memcached-index-queries/statefulset-memcached-index-queries.yaml
+++ b/charts/loki-distributed/templates/memcached-index-queries/statefulset-memcached-index-queries.yaml
@@ -83,7 +83,7 @@ spec:
         {{- end }}
       {{- with .Values.memcachedIndexQueries.affinity }}
       affinity:
-        {{- tpl . $ | nindent 8 }}
+        {{- tpl (toYaml . $) | nindent 8 }}
       {{- end }}
       {{- with .Values.memcachedIndexQueries.nodeSelector }}
       nodeSelector:
