--- a/charts/loki-distributed/templates/ruler/deployment-ruler.yaml
+++ b/charts/loki-distributed/templates/ruler/deployment-ruler.yaml
@@ -86,7 +86,7 @@ spec:
             {{- toYaml .Values.ruler.resources | nindent 12 }}
       {{- with .Values.ruler.affinity }}
       affinity:
-        {{- tpl . $ | nindent 8 }}
+        {{- tpl (toYaml . $) | nindent 8 }}
       {{- end }}
       {{- with .Values.ruler.nodeSelector }}
       nodeSelector:
